# Example-MIMXRT1170-EVK-VEEport-safety-instrumentation

./: .gh.keep_binary  .gitignore  .gitmodules  .local_copyright_ignored_files.list  CHANGELOG.md  LICENSE.txt  README.rst
mpu/: .gitignore  CHANGELOG.md  README.md  build.gradle.kts  settings.gradle.kts
mpu/app/: build.gradle.kts
mpu/app/configuration/: common.properties
mpu/app/src/main/java/com/microej/example/mpu/: Main.java
mpu/gradle/: libs.versions.toml
mpu/gradle/wrapper/: gradle-wrapper.properties
mpu/vee-port/: build.gradle.kts  configuration.properties
mpu/zephyr-bsp/: .gitignore
mpu/zephyr-bsp/vee/: CMakeLists.txt  options.cmake  prj.conf
mpu/zephyr-bsp/vee/port/core/: CMakeLists.txt
mpu/zephyr-bsp/vee/port/core/inc/: microej.h  microej_main.h  microej_time.h
mpu/zephyr-bsp/vee/port/core/src/: LLBSP_ZEPHYR.c  LLMJVM_ZephyrOS.c  core_validation.c  microej_main.c  microej_time.c
mpu/zephyr-bsp/vee/scripts/: .gitignore  build.bat  build.sh  card.resc  debug.bat  debug.gdb  debug.sh  run.bat  run.sh  runKernelWithFeatures.gdb  runKernelWithFeatures.sh  set_local_env.bat  set_local_env.sh  set_project_env.bat
mpu/zephyr-bsp/vee/src/: main.c
xrdc/: CHANGELOG.md  README.md
xrdc/app/SampleApplication/: CHANGELOG.md  README.md  build.gradle.kts  gradlew  settings.gradle.kts
xrdc/c/bsp/vee/scripts/armgcc/: CMakeLists.txt  config.cmake
xrdc/c/bsp/vee/src/bsp/: .gh-copyright.template  edma_xrdc_demo.c  edma_xrdc_demo.h
xrdc/c/bsp/vee/src/main/: .gh-copyright.template  npavee.c
xrdc/scripts/: copy_files.bat  copy_files.sh
(+1 files in other folders)
